# lernd

./: .gitignore  README.md  pyproject.toml  requirements.txt
lernd/: classes.py  experiments.py  generator.py  inferrer.py  lernd_loss.py  lernd_types.py  main.py  run_many.py  test.py  util.py
tests/: conftest.py  test_classes.py  test_generator.py  test_hypothesis.py  test_inferrer.py  test_lernd_loss.py  test_training.py  test_util.py
